// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionBar renders correctly  1`] = `
<DocumentFragment>
  .cache-7wlq72 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #ffffff;
  border: 1px solid #e6e9f0;
  border-radius: 4px;
  bottom: 20px;
  box-shadow: 0px 0px 8px 2px #D4DAE766;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 56px;
  left: 50%;
  padding: 16px;
  position: fixed;
  -webkit-transform: translate(-50%, 0);
  -moz-transform: translate(-50%, 0);
  -ms-transform: translate(-50%, 0);
  transform: translate(-50%, 0);
  width: 600px;
  z-index: 2;
}

<div
    class="cache-7wlq72 e1qbxe4b0"
  >
    Hello
  </div>
</DocumentFragment>
`;

exports[`ActionBar renders correctly with custom rank 1`] = `
<DocumentFragment>
  .cache-p6jh4q {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #ffffff;
  border: 1px solid #e6e9f0;
  border-radius: 4px;
  bottom: 172px;
  box-shadow: 0px 0px 8px 2px #D4DAE766;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 56px;
  left: 50%;
  padding: 16px;
  position: fixed;
  -webkit-transform: translate(-50%, 0);
  -moz-transform: translate(-50%, 0);
  -ms-transform: translate(-50%, 0);
  transform: translate(-50%, 0);
  width: 600px;
  z-index: 2;
}

<div
    class="cache-p6jh4q e1qbxe4b0"
  >
    I am rank 2
  </div>
</DocumentFragment>
`;
